--- a/elastic-rules/windows/Persistence/[Custom]_Use_persistence_Start_process_as_RunOnceEx.toml
+++ b/elastic-rules/windows/Persistence/[Custom]_Use_persistence_Start_process_as_RunOnceEx.toml
@@ -2,10 +2,10 @@
 creation_date = "2023/04/03"
 min_stack_version = "8.5.0"
 maturity = "production"
-updated_date = "2023/04/03"
+updated_date = "2023/04/20"
 
 [rule]
-name = "[Custom] Use persistence: Start process as RunOnce"
+name = "CUSTOM: Use persistence: Start process as RunOnceEx"
 author = ["Andrey Krasnov"]
 description = """
 This rule will generate an alert when the process will starts in follow sequence: runonce.exe -> rundll32.exe -> TargetProcess with WinEventLog 4688 or Sysmon 1 audit.
@@ -25,7 +25,7 @@ references = [
 	"https://github.com/ewhitehats/InvisiblePersistence"
 ]
 risk_score = 47
-rule_id = "4dc7c6ac-0982-4a43-aa2d-81dc692f6bca"
+rule_id = "c2ca47d2-71ec-4a69-acdc-519f875f0225"
 severity = "medium"
 tags = ["Windows", "Threat Detection", "Persistence", "TA0003", "Boot or Logon Autostart Execution", "T1547", "Registry Run Keys / Startup Folder", "T1547.001", "RunOnceEx", "Start Process", "runonce.exe", "rundll32.exe", "RunOnceExProcess"]
 type = "eql"
