--- a/elastic-rules/windows/Persistence/[Custom]_Use_persistence_Start_process_as_Run_mechanism_based_ShellCore_engine.toml
+++ b/elastic-rules/windows/Persistence/[Custom]_Use_persistence_Start_process_as_Run_mechanism_based_ShellCore_engine.toml
@@ -2,10 +2,10 @@
 creation_date = "2023/04/04"
 min_stack_version = "8.5.0"
 maturity = "production"
-updated_date = "2023/04/04"
-git
+updated_date = "2023/04/20"
+
 [rule]
-name = "[Custom] Use persistence: Start process as Run mechanism (based ShellCore engine)"
+name = "CUSTOM: Use persistence: Start process as Run mechanism (based ShellCore engine)"
 author = ["Andrey Krasnov"]
 description = """
 This rule will generate an alert when the process will starts with Run or Runnce mechanism based WinEventLog 9705 and 9707.
@@ -23,14 +23,15 @@ references = [
 	"https://nasbench.medium.com/finding-forensic-goodness-in-obscure-windows-event-logs-60e978ea45a3"
 ]
 risk_score = 47
-rule_id = "c3ad98be-a616-4e5c-9c03-6dde3ca36265"
+rule_id = "2a632806-9702-46f3-a1cf-200151c22c23"
 severity = "medium"
 tags = ["Windows", "Threat Detection", "Persistence", "TA0003", "Boot or Logon Autostart Execution", "T1547", "Registry Run Keys / Startup Folder", "T1547.001", "Run", "RunOnce", "Start Process", "runonce.exe", "Shell-Core"]
 type = "eql"
 
 query = '''
 any where
-	event.provider: "Microsoft-Windows-Shell-Core" and event.code: "9707" and not (winlog.event_data.Command like~ ("*securityhealthsystray.exe*", "*ctfmon.exe*"))
+	event.provider: "Microsoft-Windows-Shell-Core" and event.code: "9707"
+	and winlog.event_data.Command not in~ ("openvpn-gui.exe", "securityhealthsystray.exe", "ctfmon.exe /n")
 '''
 
 [[rule.threat]]
